@@ -447,6 +447,9 @@ Save the current image to a unique filename.
 .B f, F
 Save the current filelist to a unique filename.
 .TP 5
+.B <, >
+In place editing, rotate the image 90 degrees left/right.
+.TP 5
 .B <HOME>
 Goto first slide
 .TP 5
