@@ -123,6 +123,7 @@ void feh_filelist_image_remove(winwidget winwid, char do_delete);
 char *feh_strip_hostname(char *url);
 struct hostent *feh_gethostbyname(const char *name);
 void slideshow_save_image(winwidget win);
+void feh_edit_inplace_orient(winwidget w, int orientation);
 
 
 
