@@ -1,3 +1,8 @@
+Sun Jan  6 01:37:40 2002  Tom Gilbert  <tom@linuxbrit.co.uk>
+
+	* Use < or > keys to do in place edit rotations, 90 degrees left
+	or right.
+
 Sun Jan  6 01:16:04 2002  Tom Gilbert  <tom@linuxbrit.co.uk>
 
 	* Fix unlikely but naughty segv.
